Add html structure

--- a/index.html
+++ b/index.html
@@ -10,6 +10,16 @@
 </head>
 
 <body>
+    <div class="container">
+        <article id="cats">
+            <ul id="cats_list"></ul>
+            <div id="cats_current-cat">
+                <p class="cat_name"></p>
+                <img class="cat_img">
+                <p class="cat_click-counter"></p>
+            </div>
+        </article>
+    </div>
 
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
         crossorigin="anonymous"></script>
