--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 
 <body>
     <div class="container">
-        <article id="cats">
-            <ul id="cats_list"></ul>
-            <div id="cats_current-cat">
-                <p class="cat_name"></p>
-                <img class="cat_img">
-                <p class="cat_click-counter"></p>
+        <article id="cats" class="cats">
+            <ul id="cats_list" class="cats_list"></ul>
+            <div id="cats_current-cat" class="cats_current-cat">
+                <p id="cat_name"></p>
+                <img id="cat_img" class="cat_img">
+                <p id="cat_click-counter"></p>
             </div>
         </article>
     </div>
