Add functionality for admin area

--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
                 <!-- Admin field -->
                 <section id="admin" class="admin">
                     <button id="admin_btn" class="admin_btn">Admin</button>
-                    <form id="admin_form" class="admin_form">
-                        <label>Name: <input type="text"></label><br>
-                        <label>ImgURL: <input type="text"></label><br>
-                        <label>Clicks: <input type="text"></label><br>
-                        <button type="button">Cancel</button>
+                    <form id="admin_form" class="admin_form hidden">
+                        <label>Name: <input id="admin_form__name" type="text"></label><br>
+                        <label>ImgURL: <input id="admin_form__img" type="text"></label><br>
+                        <label>Clicks: <input id="admin_form__clicks" type="text"></label><br>
+                        <button id="admin_form__cancel-btn" type="button">Cancel</button>
                         <button type="submit">Submit</button>
                     </form>
                 </section>
